# ChangeLog for app-text/wxmedit
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*wxmedit-3.0 (10 Aug 2015)

  10 Aug 2015; Michał Ziąbkowski <mziab@o2.pl> +wxmedit-3.0.ebuild:
  Bumped.

*wxmedit-2.9.9-r1 (20 Jan 2015)

  20 Jan 2015; Michał Ziąbkowski <mziab@o2.pl> +wxmedit-2.9.9-r1.ebuild:
  Added eclass var to explicitly require wxGTK-2.8.

  11 Jan 2015; Michał Ziąbkowski <mziab@o2.pl> wxmedit-2.9.7.ebuild,
  wxmedit-2.9.8.ebuild, wxmedit-2.9.9.ebuild:
  Updated HOMEPAGE.

*wxmedit-2.9.9 (11 Jan 2015)

  11 Jan 2015; Michał Ziąbkowski <mziab@o2.pl> +wxmedit-2.9.9.ebuild:
  Bumped.

*wxmedit-2.9.8 (18 Sep 2014)

  18 Sep 2014; Michał Ziąbkowski <mziab@o2.pl> +wxmedit-2.9.8.ebuild:
  Bumped.

  09 Apr 2014; Michał Ziąbkowski <mziab@o2.pl> wxmedit-2.9.7.ebuild:
  Updated deps yet again.

  09 Apr 2014; Michał Ziąbkowski <mziab@o2.pl> wxmedit-2.9.7.ebuild:
  Added missing deps.

  09 Apr 2014; Michał Ziąbkowski <mziab@o2.pl> wxmedit-2.9.7.ebuild:
  Fixed LICENSE.

*wxmedit-2.9.7 (09 Apr 2014)

  09 Apr 2014; Michał Ziąbkowski <mziab@o2.pl> +wxmedit-2.9.7.ebuild,
  +metadata.xml:
  New ebuild.
